# snippet-box

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  docker-compose.example.yml  package-lock.json
client/: package-lock.json  package.json
client/src/components/Snippets/: Mermaid.tsx  SnippetDocs.tsx
client/src/containers/: Snippets.tsx
client/src/styles/: style.scss
mcp/: Dockerfile  pyproject.toml  server.py
src/controllers/: snippets.ts
